--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "express": "^4.21.2",
     "moment": "^2.30.1",
     "moment-timezone": "^0.5.47",
+    "node-cron": "^3.0.3",
     "twilio": "^5.5.1",
     "xlsx": "^0.18.5"
   }
