tudo ok, inclusive o envio no zap

--- a/.env
+++ b/.env
@@ -2,3 +2,5 @@ API_URL_DEV=http://localhost:3001/apirest.php
 API_URL_PROD=http://intranet.peruzzo.com.br/glpi-chamados/apirest.php
 PORT=3001
 NODE_ENV=development
+MSG_GROUP_NAME=BACKUP NTI
+MSG_ENDPOINT=http://intranet.peruzzo.com.br:5057/send_message
