--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
-API_URL_DEV=http://localhost:3001/apirest.php
+API_URL_DEV=http://apiperuzzo.corzti.net.br/apirest.php
 API_URL_PROD=http://intranet.peruzzo.com.br/glpi-chamados/apirest.php
 PORT=3001
 NODE_ENV=development
